# CMU-VLA-Challenge

./: .gitignore  launch_module.sh
ai_module/: README.md
ai_module/src/color_scan_generation/: CMakeLists.txt  package.xml
ai_module/src/color_scan_generation/launch/: color_scan_generation.launch
ai_module/src/color_scan_generation/src/: colorScanGeneration.cpp
ai_module/src/exploration_manager/: CMakeLists.txt  README.md  package.xml
ai_module/src/exploration_manager/config/: exploration.rviz  exploration_params.yaml
ai_module/src/exploration_manager/launch/: exploration_manager.launch
ai_module/src/exploration_manager/src/: exploration_executor_node.py  graph_builder_node.py  graph_visualizer_node.py
ai_module/src/interaction_manager/: CMakeLists.txt  package.xml
ai_module/src/interaction_manager/launch/: interaction_manager.launch
ai_module/src/interaction_manager/src/: interaction_manager.py
docker/: Dockerfile  compose.yml  compose_docker_with_x.sh  compose_docker_with_x_cpu.sh  compose_gpu.yml  download_leo_models.py  requirements.txt
