<?xml version="1.0"?>
<package format="2">
  <name>exploration_manager</name>
  <version>0.0.1</version>
  <description>Complete exploration algorithm with PointCloud2 to Occupancy Grid conversion</description>

  <maintainer email="wonhyeok316@kaist.ac.kr">Wonhyeok Choi</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>python3-opencv</build_depend>
  <build_depend>python3-scipy</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <export>
  </export>
</package> 